# Identity-Service

./: Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: deps.py  schemas.py
app/api/v1/: auth.py
app/core/: config.py  security.py
app/db/: models.py  session.py
app/db/migrations/: env.py
app/db/migrations/versions/: 6e127d7e99e7_init.py
app/repositories/: session_repository.py  user_repository.py
app/services/: auth_service.py
